--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "crypto-js": "^4.1.1",
+    "crypto-md5": "^1.0.0",
+    "md5": "^2.3.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
