--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@xmehdi01/vue-pagination-component": "^1.0.0",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "crypto-js": "^4.1.1",
     "crypto-md5": "^1.0.0",
+    "jw-vue-pagination": "^1.0.3",
     "md5": "^2.3.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
