--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
     "crypto-js": "^4.1.1",
     "crypto-md5": "^1.0.0",
     "jw-vue-pagination": "^1.0.3",
     "md5": "^2.3.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
