--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-awesome-paginate": "^1.1.46",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
